# genai_learning_path

./: .gitignore
1.1-ANN_spam_classifier/: README.md  Springboard_GenAI Launchpad_Level-1_Assignment.docx  pyproject.toml  ruff.toml
1.1-ANN_spam_classifier/reports/: final_report.md
1.1-ANN_spam_classifier/spam_classifier/: __main__.py  classifier.py
1.1-ANN_spam_classifier/spam_classifier/cli/: __init__.py  compare.py  data.py  model.py
1.1-ANN_spam_classifier/spam_classifier/data_processor/: clean.py  processor.py
1.1-ANN_spam_classifier/spam_classifier/pipelines/compare/: naive_bayes_classification.py
1.1-ANN_spam_classifier/spam_classifier/pipelines/evaluation/: analyze_errors.py  eval.py
1.1-ANN_spam_classifier/spam_classifier/pipelines/train/: training.py
1.2-LSTM_sentiment_classification/: README.md  REPORT.md  Springboard_GenAI Launchpad_Level-2_Assignment.docx  pyproject.toml
1.2-LSTM_sentiment_classification/sentiment_classification/: __init__.py  __main__.py  classifier.py  cli.py  evaluator.py
1.2-LSTM_sentiment_classification/sentiment_classification/feat_engg/: __init__.py  cleaner.py  embeddings.py  tokenizer.py
1.2-LSTM_sentiment_classification/sentiment_classification/workflows/: __init__.py  cleaning.py  embedding_creation.py  evaluation.py  inspection.py  splitting.py  tokenization.py  training.py
1.3-Transformer_Attention/: Springboard_GenAI Launchpad_Level-3_Assignment.docx  pyproject.toml  q2_softmax_calculation.md  q3_attention_intuition.md  q4_attention_wght_properties.md  q5_polysemy.md  q6_pos_encoding.md  q7_multi_head_advantages.md  q8_attn_mat_properties.md
1.3-Transformer_Attention/answers/: q1_attention_calculation.py  q9_attn_pretrained_mdls.py
1.4-Prompt_engineering/: MMM_IMPLEMENTATION.md  PROMPT_LOG_REFLECTION.md  README.md  ROI_ANALYSIS_SUMMARY.md  Springboard_GenAI Launchpad_Level-4_Assignment.docx  app.py  data_loader.py  pyproject.toml  sample_data.csv  smart_city_crisis-simulation.md  test_data_loader.py  test_mmm_function.py  test_new_charts.py  test_roi_analysis.py  test_scenario_planner.py
1.4-Prompt_engineering/tests/: test_basic.py
1.5-sql_generation/: .gitignore  README.md  Springboard_GenAI Launchpad_Level-5_Assignment.docx  main.py  prompt_template.txt  pyproject.toml  questions.json  sql_generator.py
1.5-sql_generation/output/: dwbi_sql_output.csv
1.5-sql_generation/table_schemas/: marketing_dw_schema.txt  sales_dw_schema.txt
1.6-text_to_image/: .gitignore  image_generator.py  pyproject.toml
1.6-text_to_image/output/: generation_info.txt
2.1-RAG_with_LangChain/: .env.example  Springboard_GenAI Intermediate_Level-1_Assignment.docx  pyproject.toml  q1_rag_setup.py  q2_replace_dataset.py  q3_conceptual_ques.md
2.2-Mini_RAG_insurance/: pyproject.toml  results.txt  task2.py  task3.py
2.2-Mini_RAG_insurance/Springboard_GenAI Intermediate_Level-2_Assignment/: assignment_brief.txt  doc.txt  questions.txt  requirements.txt
2.2-Mini_RAG_insurance/chunking/: fixed_window.py  sentence_aware.py
2.2-Mini_RAG_insurance/retrieval/: base.py  bm25.py  tf_idf.py
2.3-RAG_evaluation/: Springboard_GenAI Intermediate_Level-3_Assignment.docx  pyproject.toml  q1.md  q2.md  q3.md  q4.md  q5.md  q6.md  q6.py
