[project]
name = "1-3-transformer-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "transformers[torch]>=4.57.3",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
