[project]
name = "2-1-rag-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.13.1",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.2",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "loguru>=0.7.3",
    "pypdf>=6.4.1",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
