[project]
name = "2-2-mini-rag-insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.3",
    "nltk>=3.9.2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]
